--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,34 @@
 body,html {
   display: flex;
   box-sizing: border-box;
-  padding: 10px;
+  padding: 0;
   margin: 0;
   justify-content: space-around;
-  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);}
+}
 
 .app {
-  height: 600px;
-  width: 90vw;
+  height: 80vh;
+  width: 96vw;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+
+.search-bar{
+  display: grid;
+  grid-template-columns:repeat(3,auto);
+  width: 80vw;
+  padding: 20px;
+  justify-content: space-evenly;
+  color: #070000;
+  font-size: 1.5em;
+  
+}
+
+.longitude,.latitude{
+  max-width: max-content;
+  padding: 10px 5px;
+  margin-right: 10px;
+}
+
 .map {
   height: 100%;
   width: 100%;
